--- a/_posts/2017-03-21-开始.md
+++ b/_posts/2017-03-21-开始.md
@@ -7,7 +7,7 @@ image:
   feature: 2014Spurs.jpg
   teaser: 2014Spurs.jpg
   credit: Death to Stock Photo
-  creditlink: "这是神马意思"
+  creditlink: ""
 ---
 
 ### Getting Started
