--- a/_posts/2017-03-22-选择.md
+++ b/_posts/2017-03-22-选择.md
@@ -12,8 +12,8 @@ image:
 
 # 今天的总结 
 
-****编程方面****
--
+**编程方面**
+---
 
 * 1 给农业昆虫手册 加上了**Spotlight**的支持
 * 2 细看了图片浏览器库的文档 加上了 打开图片的过渡动画
@@ -21,10 +21,10 @@ image:
 * 4 提交了2.1版本的**农业昆虫手册**在中午更新
 
 
-****其他方面****
--
+**其他方面**
+---
 * 1 昨天睡前看了斯诺的 《西行散记》把感想写在了微信读书上 太祖早年的经历 我原本以为 **选择** 是一个很重要的词 其实 选择 并不会决定命运 是一种称为**karma**的 早就决定了 所以不要过于害怕与犹豫 这次 感觉 对于 蘑菇对比利说的话 有了更深的了解 **选择**不是一个重要的词 所以不要畏畏缩缩 
-*  2 看了知乎上 关于长平之战的考据 是关注的历史大神的时间线上看到的 [白起真的坑杀了四十万赵卒吗？－ 秋原的回答](https://www.zhihu.com/question/20363696/answer/152719949) </br> 感想: 后面有些答案不知道怎么想的 战国是服兵役的制度 昭襄王都亲自跑去征召十五六岁的人参加战争 赵国能不押注吗？ 这是不能输的赌局 已经没有退的一方了 不是后来的职业军人制度 </br> 中国人真是不可战胜的 第一次了解了 **京观** 这种东西 这样浴血的历史 中国人真是不可战胜的 安眠吧 赵国的勇士 虽然你们的后人在后来灭秦战争中表现真不咋地 **白起**  伟大的军事家 历史真是 让人着迷
+*  2 看了知乎上 关于长平之战的考据 是关注的历史大神的时间线上看到的 [白起真的坑杀了四十万赵卒吗？－ 秋原的回答](https://www.zhihu.com/question/20363696/answer/152719949)  <br> 感想: 后面有些答案不知道怎么想的 战国是服兵役的制度 昭襄王都亲自跑去征召十五六岁的人参加战争 赵国能不押注吗？ 这是不能输的赌局 已经没有退的一方了 不是后来的职业军人制度 <br>中国人真是不可战胜的 第一次了解了 **京观** 这种东西 这样浴血的历史 中国人真是不可战胜的 安眠吧 赵国的勇士 虽然你们的后人在后来灭秦战争中表现真不咋地 **白起**  伟大的军事家 历史真是 让人着迷
 
 
 
