--- a/_posts/2017-03-27-大口吃饭.md
+++ b/_posts/2017-03-27-大口吃饭.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "今天的一点思考"
+title: "大口吃饭 我的朋友"
 categories: journal
 tags: [documentation,sample]
 image:
@@ -20,7 +20,7 @@ image:
 * 2 更新的是**维基寻迹** 本来想更新 **农业昆虫手册** 但是 那些复杂的默认和自定义的NavigationBar的关系 以及现在顺滑的动画不想破坏 就没有改动了
 * 3 在**NavigationController**的**push**动画中 **fromView**是会向左移动一点的 如果 你全是自定义的NavBar 那么在push时 会显示出 **window**的backgroundColor的黑色
 * 4 终于要看下一章了 把**iOS动画**给完成 以前的入门教程(斯坦福的保罗 和 那本花书)里都没有这些 要进阶 要进阶
-* 5 谢谢**xiaolong**的姿瓷 谢谢你 
+* 5 谢谢**xiaolong**一直以来的姿瓷 谢谢你 
 
 
 
@@ -29,6 +29,8 @@ image:
 * 1 这两天睡眠很不好 晚上要吃半粒褪黑色素
 * 2 人都有自己的命运 **大口吃饭**吧 我的朋友 
 * 3 这次用自己的图片 是马刺的帽子
+* 4 在知乎看了一种说法 现在是三共了 一共是马列毛 二共是中特 三共是**梦 那一个刺死黑帮讨债的儿子 在汉朝确实是会被嘉奖 历史记载确实不少 再次验证 基层 早已破败 恃德者昌 恃力者亡
+* 5 睡不着用微信读书的朗读功能 以前不怎么看这些历史 现在看来真是有意思
 
 
 
