--- a/_posts/2017-03-27-大口吃饭.md
+++ b/_posts/2017-03-27-大口吃饭.md
@@ -30,7 +30,7 @@ image:
 * 2 人都有自己的命运 **大口吃饭**吧 我的朋友 
 * 3 这次用自己的图片 是马刺的帽子
 * 4 在知乎看了一种说法 现在是三共了 一共是马列毛 二共是中特 三共是**梦 那一个刺死黑帮讨债的儿子 在汉朝确实是会被嘉奖 历史记载确实不少 再次验证 基层 早已破败 恃德者昌 恃力者亡
-* 5 睡不着用微信读书的朗读功能 以前不怎么看这些历史 现在看来真是有意思
+* 5 睡不着用微信读书的朗读功能 朗读 《西行漫记》 以前不怎么看这些历史 现在看来真是有意思
 
 
 
